--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "typescript": "^5.5.3"
   }
 }
