--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
+    "@tanstack/vue-table": "^8.19.3",
+    "@vueuse/core": "^10.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.408.0",
     "nuxt": "^3.12.3",
     "radix-vue": "^1.9.0",
     "shadcn-nuxt": "^0.10.4",
